--- a/README
+++ b/README
@@ -1,17 +1,3 @@
-Here's my little project.
-And here's my little idea;
+An example of a networked game of Pacman.
 
-Make a small game that can be run without user-interaction;
-The AI NPC can navigate a large overworld to find 'dungeons'
-Once a dungeon is found, the player can take control and explore / fight in said dungeon.
-
-Must have features
--> Application must be able to receive 'content' updates from an external application, possibly over wifi or suitable, portable method.
-
-Possible features
--> 3D combat scene akin to Dragon Quest
--> Social Networking
--> User options for name, time scale, world size
-
-Stuff
-OpenGL is being used to keep the project portable (IF it goes well)
+wacca wacca!
